--- a/career.html
+++ b/career.html
@@ -15,7 +15,7 @@
      <!-- CSS -->
       <link rel="stylesheet" href="http://unpkg.com/ress/dist/ress.min.css">
       <link href="https://fonts.googleapis.com/css2?family=Caveat" rel="stylesheet">
-      <link href="style.css" rel="stylesheet">
+      <link rel="stylesheet" href="https://EHa14.github.io/portfolio1/style.css"/>
      </head>
 
     <body>
