--- a/career.html
+++ b/career.html
@@ -9,7 +9,7 @@
      <meta property="og:description" content="ポートフォリオサイトです。">
      <meta property="og:image" content="http://example.com/images/main.png">
      <meta name="description" content="WEBデザイン初心者ポートフォリオサイト">
-     <link rel="icon" type="image/png" href="images/main.png">
+     <link rel="icon" type="image/png" href="main.png">
      <meta name="viewport" content="width=device-width, initial-scale=1">
 
      <!-- CSS -->
@@ -39,7 +39,7 @@
         </header><!--- ヘッダー --->
 
         <div class="career">
-        <img src="images/block.png" alt="ブロック">
+        <img src="block.png" alt="ブロック">
         <h4>Career</h4>
         <p>-経歴-</p>
         </div>
@@ -78,7 +78,7 @@
           </div>
           
           <div class="line-img">
-            <img src="images/line.png">
+            <img src="line.png">
           </div>
 
           <div class="main">
