--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <meta property="og:description" content="ポートフォリオサイトです。">
       <meta property="og:image" content="http://example.com/images/main.png">
       <meta name="description" content="WEBデザイン初心者ポートフォリオサイト">
-      <link rel="icon" type="image/png" href="images/main.png">
+      <link rel="icon" type="image/png" href="main.png">
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- CSS -->
@@ -38,7 +38,7 @@
       </header><!--- ヘッダー --->
 
       <div class="main-content">
-        <img src="images/main.png" alt="メインエリア部分">
+        <img src="main.png" alt="メインエリア部分">
         <p>Haruna Endo<br>
         　This is<br>
         　　My Portfolio</p>
@@ -46,14 +46,14 @@
 
       <a id="about"></a>
       <div class="about">
-        <img src="images/block.png" alt="ブロック">
+        <img src="block.png" alt="ブロック">
         <h4>About</h4>
         <p>-私について-</p>
       </div>
         <div class="about-content">
-          <img src="images/about.png" class="about-img">
+          <img src="about.png" class="about-img">
           <div class="mb-img">
-            <img src="images/about-mb.png">
+            <img src="about-mb.png">
           </div>
           <div class="about-wrapper">
             <p>遠藤　晴菜　/　Haruna　Endo<br>
@@ -72,32 +72,32 @@
 
         <a id="works"></a>
       <div class="works">
-        <img src="images/block.png" alt="ブロック">
+        <img src="block.png" alt="ブロック">
         <h4>Works</h4>
         <p>-スクールで制作した作品-</p>
       </div>
       <div class="works-content">
           <div class="works-box1">
-            <a href="https://tqfwksa2206.wixsite.com/1st-subject"><img src="images/site1.png"></a>
+            <a href="https://tqfwksa2206.wixsite.com/1st-subject"><img src="site1.png"></a>
             <p>WIX-サイト制作-</p>
           </div>
           <div class="works-box2">
-            <a href="https://tqfwksa2206.wixsite.com/2nd-subject"><img src="images/site2.png"></a>
+            <a href="https://tqfwksa2206.wixsite.com/2nd-subject"><img src="site2.png"></a>
             <p>WIX-サイト制作-</p>
           </div>
           <div class="works-box3">
-            <a href="https://tqfwksa2206.wixsite.com/3rd-subject"><img src="images/site3.png"></a>
+            <a href="https://tqfwksa2206.wixsite.com/3rd-subject"><img src="site3.png"></a>
             <p>WIX-サイト制作-</p>
           </div>
           <div class="works-box4">
-            <a href="https://nutri22.net/"><img src="images/site4.png"></a>
+            <a href="https://nutri22.net/"><img src="site4.png"></a>
             <p>WIX-サイト制作-</p>
           </div>
       </div><!---Works-content--->
       
       <a id="strength"></a>
       <div class="strength">
-        <img src="images/block.png" alt="ブロック">
+        <img src="block.png" alt="ブロック">
         <h4>Strength</h4>
         <p>-スクールで制作した作品-</p>
       </div>
@@ -118,7 +118,7 @@
 
       <a id="contact"></a>
       <div class="contact">
-        <img src="images/block.png" alt="ブロック">
+        <img src="block.png" alt="ブロック">
         <h4>Contact</h4>
         <p>-お問い合わせ-</p>
         </div>
