--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           </div>
           <div class="works-box4">
             <a href="https://nutri22.net/"><img src="site4.png"></a>
-            <p>WIX-サイト制作-</p>
+            <p>Wordpress-サイト制作-</p>
           </div>
       </div><!---Works-content--->
       
